# busybeacon

./: README.md
.github/workflows/: ci.yml
firmware/: Cargo.toml  README.md
firmware/.cargo/: config.toml
firmware/application/: Cargo.toml  README.md  build.rs
firmware/application/crates/async-button-rtic/: Cargo.toml
firmware/application/firmware/: Cargo.toml
firmware/application/firmware/src/: led_statemachine.rs  main.rs  uart_logger.rs
firmware/application/src/: led_statemachine.rs  main.rs  uart_logger.rs  usb_utils.rs
firmware/bootloader/: Cargo.toml  build.rs
firmware/bootloader/src/: main.rs
firmware/core/: Cargo.toml
hardware/: BusyBeaconCase.f3z  BusyBeaconCase_Bot.step  BusyBeaconCase_Top.step
software/: Cargo.toml
software/src/: lib.rs  main.rs
